@@ -1,30 +1,47 @@
-<chapter id="migrating">
+<part id="migrating">
   <title>Migrating to GIO</title>
 
-  <para>
-    This chapter explains how to port applications from POSIX I/O or
-    gnome-vfs to GIO.
-  </para>
+  <chapter>
+    <title>Migrating from POSIX to GIO</title>
+  
+    <table id="posix-vs-gio">
+      <title>Comparison of POSIX and GIO concepts</title>
+      <tgroup cols="2">
+        <thead>
+          <row><entry>POSIX</entry><entry>GIO</entry></row>
+        </thead>
+        <tbody>
+          <row><entry>char *path</entry><entry>GFile *file</entry></row>
+          <row><entry>struct stat *buf</entry><entry>GFileInfo *info</entry></row>
+          <row><entry>struct statvfs *buf</entry><entry>GFileInfo *info</entry></row>
+          <row><entry morerows="1">int fd</entry><entry>GInputStream *in</entry></row>
+          <row><entry>GOutputStream *out</entry></row>
+          <row><entry>DIR *</entry><entry>GFileEnumerator *enum</entry></row>
+          <row><entry>fstab entry</entry><entry>GUnixMountPoint *mount_point</entry></row>
+          <row><entry>mtab entry</entry><entry>GUnixMountEntry *mount_entry</entry></row>
+        </tbody>
+      </tgroup>
+    </table>  
 
-  <table id="posix-vs-gio">
-    <title>Comparison of POSIX and GIO concepts</title>
-    <tgroup cols="2">
-      <thead>
-        <row><entry>POSIX</entry><entry>GIO</entry></row>
-      </thead>
-      <tbody>
-        <row><entry>char *path</entry><entry>GFile *file</entry></row>
-        <row><entry>struct stat *buf</entry><entry>GFileInfo *info</entry></row>
-        <row><entry>struct statvfs *buf</entry><entry>GFileInfo *info</entry></row>
-        <row><entry morerows="1">int fd</entry><entry>GInputStream *in</entry></row>
-        <row><entry>GOutputStream *out</entry></row>
-        <row><entry>DIR *</entry><entry>GFileEnumerator *enum</entry></row>
-        <row><entry>fstab entry</entry><entry>GUnixMountPoint *mount_point</entry></row>
-        <row><entry>mtab entry</entry><entry>GUnixMountEntry *mount_entry</entry></row>
-      </tbody>
-    </tgroup>
- </table>  
+  </chapter>
 
-  <!-- FIXME now explain ! -->
+  <chapter>
+    <title>Migrating from GnomeVFS to GIO</title>
 
-</chapter>
+    <table id="gnome-vfs-vs-gio">
+      <title>Comparison of GnomeVFS and GIO concepts</title>
+      <tgroup cols="2">
+        <thead>
+          <row><entry>GnomeVFS</entry><entry>GIO</entry></row>
+        </thead>
+        <tbody>
+          <row><entry>GnomeVFSVolume</entry><entry>GMount</entry></row>
+          <row><entry>GnomeVFSDrive</entry><entry>GVolume</entry></row>
+          <row><entry>-</entry><entry>GDrive</entry></row>
+        </tbody>
+      </tgroup>
+    </table>
+
+  </chapter>
+
+</part>
